# collector

./: .gitignore  pyproject.toml
collector/: fixtures.csv  run.py
collector/common/: file_helpers.py
collector/config/: leagues.yaml  scraper.yaml  sources.yaml
collector/config/mappings/: fbref.yaml  football-data.yaml  soccerstats.yaml
collector/models/: job.py  league.py  source.py
collector/registry/: jobs.py  leagues.py  sources.py
collector/scrapers/: base.py  fbref.py  football_data.py  soccerstats.py
