[project]
name = "collector"
version = "0.1.0"
description = "Source-agnostic football data collection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi==0.7.4",
    "requests==2.32.5",
    "lxml==5.3.0",
    "pandas==2.2.3",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]
